--- a/index.html
+++ b/index.html
@@ -19,25 +19,25 @@
     <nav>
       <ul>
         <li><a href="/index.html">Home</a></li>
-        <li><a href="">About</a></li>
+        <li><a href="/about.html">About</a></li>
       </ul> 
     </nav>
 
 
       
     <h1>Mind Matters</h1>
-    <div class="images">
-      <div>
+    <div class="flex-container">
+      <div class="flex-item">
         <img src="assets/raise_awareness.jpeg" alt="An image of diverse people coming together, holding up symbols of mental health awareness like green ribbons and brains, with a glowing light and colorful brain symbolizing hope and understanding in the background.">
         <p>Raising awareness about mental health issues</p>  
       </div>
 
-      <div>
+      <div class="flex-item">
         <img src="assets/stigma.jpeg" alt="A split image showing one side in black and white with a sad man covering his face in shame, and the other side in vibrant color with the same person wearing a mask, surrounded by hands reaching out.">
         <p>Reducing stigma associated with mental illness</p>  
       </div>
 
-      <div>
+      <div class="flex-item">
         <img src="assets/resources.jpeg" alt="A serene scene with an open book, a phone with a helpline number, and a warm, welcoming community center, all surrounded by calming natural elements like trees and sunlight, symbolizing access to mental health resources and support.">
         <p>Promoting mental health resources and support</p>  
       </div>
