Add the <label>, <input>, and <button> elements to my index.html file, create variables to store the <p> element where the message will display and the <button> element in my script.js file, attach an event listener to the variable storing the <button> element, define the function I named inside the event listener.

--- a/index.html
+++ b/index.html
@@ -58,6 +58,18 @@
           distributed
         </li>
       </ol>
+
+      <div class="personalMessage">
+        <h2>Personalized Message</h2>
+        <p>Enter your name for a supportive message!</p>
+        <div class="messageItem">
+          <label for="getName">Your name: </label>
+          <input type="text" id="yourName" />
+        </div>
+        <button id="nameButton">Generate Your Message</button>
+
+        <p id="message"></p>
+      </div>
     </main>
   </body>
 </html>
