Create a section to generate quotes, add a button with id "quoteButton", create an array to store the quotes, add a <p> element with an id attribute to display the text from the array

--- a/index.html
+++ b/index.html
@@ -70,6 +70,14 @@
 
         <p id="message"></p>
       </div>
+
+      <div class="quoteGenerator">
+        <h2>Mental Health Awareness Quotes</h2>
+        <p>Click the button to get a quote.</p>
+
+        <button id="quoteButton">Generate</button>
+        <p id="quote"></p>
+      </div>
     </main>
   </body>
 </html>
